--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
 <html lang="en">
   <head>
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Yunfan Chen by yunfanchen</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -29,7 +28,7 @@
 
     <style>
       button.accordion {
-      font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font:12px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
       cursor: pointer;
       padding: 0px;
       border: none;
@@ -55,7 +54,7 @@
       }
       div.panel {
       padding: 0 20px;
-      margin-top: 5px;
+      margin-top: 1px;
       display: none;
       background-color: white;
       font-size: 100%;
@@ -74,34 +73,31 @@
     <div class="wrapper">
       <header>
         <h1>Yunfan Chen</h1>
-        <p>Assistant Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <p>Ph.D in Electrical and Electronic Engineering<br>Hanyang University</p>
+        <p>Research Affiliate<br><a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a></p>
+    <h3><a href="https://joysilver.github.io/yunfanchen/">Home</a></h3>
+        <h3><a href="https://joysilver.github.io/yunfanchen/research.html">Research</a></h3>
+    <h3><a href="https://joysilver.github.io/yunfanchen/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://joysilver.github.io/yunfanchen/Publications.html">Publications</a></h3> 
+        <h3><a href="https://joysilver.github.io/yunfanchen/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
-          <br>
+          <a href="mailto:chenyunfan@hanyang.ac.kr" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="https://scholar.google.com/citations?user=jM0qv0IAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
+          <a href="https://orcid.org/0000-0003-4808-6352"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
+          <a href="https://github.com/Joysilver"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="https://www.linkedin.com/in/yunfan-chen-53b49a180/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
         </div>
         <br>
-
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
-    <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        
       </header>
       <section>
-      <img src="IMG_2409_edit_pro_photo_square_small.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-      <p>I am currently an Assistant Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
-      <p>My research interests include labor economics, urban economics, the economics of education, and applications of machine learning.</p>
+      <img src="IMGyf.jpg" height="250" width="195" alt="Yunfan Chen">
+      <p>I graduated with a Ph.D. in Electrical and Electronic Engineering from <a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a> in December 2020.</p>
+      <p>My research interests include artificial intelligence, computer vision, deep learning, pattern recognition, image fusion, and their applications.</p>
+      <br>
+      <p><b>Contact:</b><br>Room 405, the 4th Engineering Building<br>Hanyangdaehak-ro, Sangrok-gu, Ansan-si, Gyeonggi-do<br>15588, Republic of Korea</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
