--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
         </div>
         <br>
         <br>
+        <br>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
         
       </header>
       <section>
-      <img src="IMGyf.jpg" height="250" width="195" alt="Yunfan Chen">
+      <img src="IMGyf.jpg" height="250" width="195" alt="Yunfan Chen"><br>
       <p>I graduated with a Ph.D. in Electrical and Electronic Engineering from <a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a> in December 2020.</p>
       <p>My research interests include artificial intelligence, computer vision, deep learning, pattern recognition, image fusion, and their applications.</p>
       <br>
