--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="wrapper">
       <header>
         <h1>Yunfan Chen</h1>
-        <p>Ph.D in Electrical and Electronic Engineering<br>Hanyang University</p>
+        <p>Ph.D. in Electrical and Electronic Engineering<br>Hanyang University</p>
         <p>Research Affiliate<br><a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a></p>
     <h3><a href="https://joysilver.github.io/yunfanchen/">Home</a></h3>
         <h3><a href="https://joysilver.github.io/yunfanchen/research.html">Research</a></h3>
