--- a/publications.html
+++ b/publications.html
@@ -76,9 +76,8 @@
         <p>Ph.D. in Electrical and Electronic Engineering<br>Hanyang University</p>
         <p>Research Affiliate<br><a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a></p>
     <h3><a href="https://joysilver.github.io/yunfanchen/">Home</a></h3>
-        <h3><a href="https://joysilver.github.io/yunfanchen/research.html">Research</a></h3>
+        <h3><a href="https://joysilver.github.io/yunfanchen/publications.html">Publications</a></h3>
     <h3><a href="https://joysilver.github.io/yunfanchen/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://joysilver.github.io/yunfanchen/Publications.html">Publications</a></h3> 
         <h3><a href="https://joysilver.github.io/yunfanchen/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
@@ -109,7 +108,7 @@
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/Context-awarePedestrianDetecti.pdf">Context-aware pedestrian detection especially for small-sized instances with Deconvolution Integrated Faster RCNN (DIF R-CNN)</a> <br> with Han Xie, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Applied Intelligence</i>, 2019, 49(3): 1200–1211. <b>(SCI)</b> <br><br> </p>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1016/j.econedurev.2018.04.002">Do High School Sports Build or Reveal Character? Bounding Causal Estimates of Sports Participation</a> (with <a href="https://economics.byu.edu/Pages/Faculty%20Pages/Michael-R.-Ransom.aspx">Michael R Ransom</a>) <br> <i>Economics of Education Review</i>, 2018, 64 (1), 75&ndash;89. <br><button class="accordion">
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/How-Training-Data-Influence-The-Recognition-Performance.pdf">How training data influence the recognition performance?</a> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Sai Rishi, Atharva Sharma, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>International Journal of Scientific and Technology Research</i>, 2019, 8(12): 1340–1344. <br><br> </p>
     <hr>
 
 <!-- 
