--- a/publications.html
+++ b/publications.html
@@ -108,7 +108,7 @@
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/Context-awarePedestrianDetecti.pdf">Context-aware pedestrian detection especially for small-sized instances with Deconvolution Integrated Faster RCNN (DIF R-CNN)</a> <br> with Han Xie, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Applied Intelligence</i>, 2019, 49(3): 1200–1211. <b>(SCI)</b> <br><br> </p>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/How-Training-Data-Influence-The-Recognition-Performance.pdf">How training data influence the recognition performance?</a> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Sai Rishi, Atharva Sharma, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>International Journal of Scientific and Technology Research</i>, 2019, 8(12): 1340–1344. <br><br> </p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/How-Training-Data-Influence-The-Recognition-Performance.pdf">How training data influence the recognition performance?</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Sai Rishi, Atharva Sharma, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>International Journal of Scientific and Technology Research</i>, 2019, 8(12): 1340–1344. <br><br> </p>
     <hr>
 
 <!-- 
