--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         <h1>Yunfan Chen</h1>
         <p>Ph.D. in Electrical and Electronic Engineering<br>Hanyang University</p>
         <p>Research Affiliate<br><a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a></p>
-    <h3><a href="https://joysilver.github.io/yunfanchen/">Home</a></h3>
-        <h3><a href="https://joysilver.github.io/yunfanchen/publications.html">Publications</a></h3>
-    <h3><a href="https://joysilver.github.io/yunfanchen/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://joysilver.github.io/yunfanchen/personal.html">Personal</a></h3>
+    <h3><a href="https://yunfan-chen.github.io/yunfanchen/">Home</a></h3>
+        <h3><a href="https://yunfan-chen.github.io/yunfanchen/publications.html">Publications</a></h3>
+    <h3><a href="https://yunfan-chen.github.io/yunfanchen/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://yunfan-chen.github.io/yunfanchen/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:chenyunfan@hanyang.ac.kr" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
