--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <a href="mailto:chenyunfan@hanyang.ac.kr" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.com/citations?user=jM0qv0IAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0003-4808-6352"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="https://github.com/Joysilver"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="https://github.com/yunfan-chen"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="https://www.linkedin.com/in/yunfan-chen-53b49a180/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
         </div>
         <br>
