--- a/publications.html
+++ b/publications.html
@@ -75,16 +75,16 @@
         <h1>Yunfan Chen</h1>
         <p>Ph.D. in Electrical and Electronic Engineering<br>Hanyang University</p>
         <p>Research Affiliate<br><a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a></p>
-    <h3><a href="https://joysilver.github.io/yunfanchen/">Home</a></h3>
-        <h3><a href="https://joysilver.github.io/yunfanchen/publications.html">Publications</a></h3>
-    <h3><a href="https://joysilver.github.io/yunfanchen/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://joysilver.github.io/yunfanchen/personal.html">Personal</a></h3>
+    <h3><a href="https://yunfan-chen.github.io/yunfanchen/">Home</a></h3>
+        <h3><a href="https://yunfan-chen.github.io/yunfanchen/publications.html">Publications</a></h3>
+    <h3><a href="https://yunfan-chen.github.io/yunfanchen/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://yunfan-chen.github.io/yunfanchen/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:chenyunfan@hanyang.ac.kr" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.com/citations?user=jM0qv0IAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0003-4808-6352"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="https://github.com/Joysilver"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="https://github.com/yunfan-chen"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="https://www.linkedin.com/in/yunfan-chen-53b49a180/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
         </div>
         <br>
@@ -96,19 +96,19 @@
       <section>
 
     <h2><a id="published-papers-updated" class="anchor" href="#publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>International Journal</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/josaa-37-5-768.pdf">Multispectral image fusion based pedestrian detection using a multilayer fused deconvolutional single-shot detector</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a> and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Journal of the Optical Society of America A</i>, 2020, 37(5): 768–779. <b>(SCI)</b> <br><br> </p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/josaa-37-5-768.pdf">Multispectral image fusion based pedestrian detection using a multilayer fused deconvolutional single-shot detector</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a> and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Journal of the Optical Society of America A</i>, 2020, 37(5): 768–779. <b>(SCI)</b> <br><br> </p>
     
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/applsci-10-00809-v2.pdf">Pedestrian detection at night in infrared images using an attention-guided encoder-decoder convolutional neural network</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a> and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Applied Sciences</i>, 2020, 10(3): 809. <b>(SCIE)</b> <br><br> </p> 
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/applsci-10-00809-v2.pdf">Pedestrian detection at night in infrared images using an attention-guided encoder-decoder convolutional neural network</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a> and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Applied Sciences</i>, 2020, 10(3): 809. <b>(SCIE)</b> <br><br> </p> 
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/Multi-layer fusion techniques using a CNN for multispectral pedestrian detection.pdf">Multi-layer fusion techniques using a CNN for multispectral pedestrian detection</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Han Xie, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br>  <i>IET Computer Vision</i>, 2018, 12(8): 1179–1187.  <b>(SCI)</b> <br><br> </p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/Multi-layer fusion techniques using a CNN for multispectral pedestrian detection.pdf">Multi-layer fusion techniques using a CNN for multispectral pedestrian detection</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Han Xie, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br>  <i>IET Computer Vision</i>, 2018, 12(8): 1179–1187.  <b>(SCI)</b> <br><br> </p>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/PerformanceEnhancementTechniqu.pdf">Performance enhancement techniques for traffic sign recognition using a deep neural network</a> <br> with Jameel Ahmed Khan, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Yawar Rehman, and  <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Multimedia Tools and Applications</i>, 2020. <b>(SCIE)</b> <br><br> </p> 
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/PerformanceEnhancementTechniqu.pdf">Performance enhancement techniques for traffic sign recognition using a deep neural network</a> <br> with Jameel Ahmed Khan, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Yawar Rehman, and  <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Multimedia Tools and Applications</i>, 2020. <b>(SCIE)</b> <br><br> </p> 
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/A New Deep Learning Based Multi-Spectral Image Fusion.pdf">A new deep learning based multi-spectral image fusion method</a> <br> with Jingchun Piao, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Entropy</i>, 2019, 21(6): 570. <b>(SCIE)</b> <br><br> </p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/A New Deep Learning Based Multi-Spectral Image Fusion.pdf">A new deep learning based multi-spectral image fusion method</a> <br> with Jingchun Piao, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Entropy</i>, 2019, 21(6): 570. <b>(SCIE)</b> <br><br> </p>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/Context-awarePedestrianDetecti.pdf">Context-aware pedestrian detection especially for small-sized instances with Deconvolution Integrated Faster RCNN (DIF R-CNN)</a> <br> with Han Xie, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Applied Intelligence</i>, 2019, 49(3): 1200–1211. <b>(SCI)</b> <br><br> </p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/Context-awarePedestrianDetecti.pdf">Context-aware pedestrian detection especially for small-sized instances with Deconvolution Integrated Faster RCNN (DIF R-CNN)</a> <br> with Han Xie, <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>Applied Intelligence</i>, 2019, 49(3): 1200–1211. <b>(SCI)</b> <br><br> </p>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://joysilver.github.io/yunfanchen/research/How-Training-Data-Influence-The-Recognition-Performance.pdf">How training data influence the recognition performance?</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Sai Rishi, Atharva Sharma, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>International Journal of Scientific and Technology Research</i>, 2019, 8(12): 1340–1344. <br><br> </p>
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://yunfan-chen.github.io/yunfanchen/research/How-Training-Data-Influence-The-Recognition-Performance.pdf">How training data influence the recognition performance?</a> <br> with <a href="https://joysilver.github.io/yunfanchen/">Yunfan Chen</a>, Sai Rishi, Atharva Sharma, and <a href="https://digital.hanyang.ac.kr/profecessor">Hyunchul Shin</a> <br> <i>International Journal of Scientific and Technology Research</i>, 2019, 8(12): 1340–1344. <br><br> </p>
     <hr>
 
 <!-- 
