--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <section>
       <img src="IMGyf.jpg" height="250" width="195" alt="Yunfan Chen"><br>
       <br>
-      <p>I graduated with a Ph.D. in Electrical and Electronic Engineering from <a href="https://www.hanyang.ac.kr/web/eng">Hanyang University, Korea,</a> in December 2020.<br>I recieved the B.S. degree from the School of Information Science and Engineering, Wuhan Univeristy of Science and Technology, China, in 2015.</p>
+      <p>I graduated with a Ph.D. in Electrical and Electronic Engineering from <a href="https://www.hanyang.ac.kr/web/eng">Hanyang University</a>, Korea, in December 2020.<br>I recieved the B.S. degree from the School of Information Science and Engineering, <a href="http://www.wust.edu.cn/english/">Wuhan Univeristy of Science and Technology</a>, China, in 2015.</p>
       <p>My research interests include artificial intelligence, computer vision, deep learning, pattern recognition, image fusion, and their applications.</p>
       <br>
 
